--- a/Web.config
+++ b/Web.config
@@ -6,6 +6,10 @@
   -->
 
 <configuration>
+  <connectionStrings>
+    <add name="DatabaseConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=\\112.124.112.166\Weixin\Game\HZGift\Data\Database.mdb;Persist Security Info=False"
+      providerName="System.Data.OleDb" />
+  </connectionStrings>
   <appSettings>
     <add key="appid" value="wx02325e359f7c9c4c"/>
     <add key="secret" value="ef48f7cf1451e2d23b80c03789288870"/>
