--- a/Web.config
+++ b/Web.config
@@ -11,8 +11,10 @@
       providerName="System.Data.OleDb" />
   </connectionStrings>
   <appSettings>
-    <add key="appid" value="wx02325e359f7c9c4c"/>
-    <add key="secret" value="ef48f7cf1451e2d23b80c03789288870"/>
+    <!--<add key="appid" value="wx02325e359f7c9c4c"/>
+    <add key="secret" value="ef48f7cf1451e2d23b80c03789288870"/>-->
+    <add key="appid" value="wx650567672020d92b"/>
+    <add key="secret" value="c3a85e3ca66f3425a65d96aae6ce63fa"/>
     <add key="password" value="123"/>
   </appSettings>
   <system.web>
