--- a/Web.config
+++ b/Web.config
@@ -6,6 +6,9 @@
   -->
 
 <configuration>
+  <connectionStrings>
+    <add name="OrderFoodConnStr" connectionString="Data Source=.;Initial Catalog=OrderFood;Persist Security Info=True;User ID=sa;Password=sql" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <!--<add key="appid" value="wx02325e359f7c9c4c"/>
     <add key="secret" value="ef48f7cf1451e2d23b80c03789288870"/>-->
