--- a/Web.config
+++ b/Web.config
@@ -12,8 +12,8 @@
   <appSettings>
     <!--<add key="appid" value="wx02325e359f7c9c4c"/>
     <add key="secret" value="ef48f7cf1451e2d23b80c03789288870"/>-->
-    <add key="appid" value="wx650567672020d92b"/>
-    <add key="secret" value="c3a85e3ca66f3425a65d96aae6ce63fa"/>
+    <add key="appid" value="wxff8aa63b127ef179"/>
+    <add key="secret" value="4648f65c9ee16b423ebc7a88f0050ae4"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
